# DeepStack-IDS

./: README.md
docs/: Manual de Instalacion.docx  Manual de Usuario.docx
src/ddos-models/: default_model.py  main.py  ml_model.py
src/main/frida-ddos-models/: consts.py  main.py  ml.py  models.py  pyproject.toml
src/main/java/cic/cs/unb/ca/flow/ui/: FlowMonitorPane.java
src/main/java/cic/cs/unb/ca/ifm/ui/: MainFrame.java
src/main/java/cic/cs/unb/ca/jnetpcap/worker/: TrafficFlowWorker.java
src/main/java/cic/cs/unb/ca/notify/: HttpClientUtil.java
src/main/java/cic/cs/unb/ca/python/: PythonProcessManager.java
